[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "twcrawl"
version = "0.1.0"
description = "TradeWars TWGS server crawler and MicroBlaster-style static page generator"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
twcrawl = "twcrawl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

